# hps-exclusion

./: .gitignore  LICENSE  README.md  __init__.py  _max_interval_size_lut.py  fit.py  plot.py  pyproject.toml  requirements.txt
models/: __init__.py  _general.py  simp.py  vanilla.py
optimum_interval_method/: __init__.py  _oim.py  _sample_generation.py  test_largest_interval_by_k.py
production/: _polynomial.py  _trident_differential_production.py  mass_resolution.py  radiative_acceptance.py  radiative_fraction.py
src/models/: _general.py  simp.py
src/optimum_interval_method/: __init__.py  _oim.py
src/production/: __init__.py  _polynomial.py  _trident_differential_production.py  mass_resolution.py  radiative_fraction.py  trident_differential_production.py
uphpstr/: __init__.py
