[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimum_interval_method"
version = "0.0.2"
authors = [
  { name="Tom Eichlersmith", email="eichl008@umn.edu" }
]
description = "NumPy implementation of Optimum Interval Method from Yellin (2003)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy"
]

[project.optional-dependencies]
lint = [ "ruff" ]
test = [ "pytest" ]
dev = [ "optimum_interval_method[lint,test]" ]

[tool.ruff]
line-length = 99
show-source = true
