[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hps-exclusion"
version = "0.0.5"
authors = [
  { name="Tom Eichlersmith", email="eichl008@umn.edu" }
]
description = "NumPy implementation of Optimum Interval Method from Yellin (2003) along with HPS helpers for analyzing exclusion"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "uproot",
  "awkward"
]

[project.optional-dependencies]
lint = [ "ruff" ]
test = [ "pytest" ]
dev = [ "hps-exclusion[lint,test]" ]

[tool.hatch.build.targets.wheel]
packages = [
  "src/models",
  "src/optimum_interval_method",
  "src/production"
]

[tool.ruff]
line-length = 99
show-source = true
